--- a/public/chat.html
+++ b/public/chat.html
@@ -32,6 +32,7 @@
       <div id="feedback"></div>
       <input type="text" id="message" placeholder="Message" />
       <button id="send">Send</button>
+      <a href="/logout">Logout</a>
     </div>
     <script src="/chat.js"></script>
   </body>
